finish auhtor swagger
